tests/compile-fail/cant-find-crate.rs
extern crate doesntexist;   //~ error: can't find crate
